--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- SOCIAL MEDIA ICONS -->
     <div
       style="position: absolute; top: 2.25vh; right: 20px; z-index: 10000"
-      class="social-media-icons fade-left-desktop fade-mobile animation"
+      class="social-media-icons fade-left-desktop fade-left-mobile animation"
     >
       <a
         class="p-2 me-auto no-underline"
@@ -101,7 +101,7 @@
         <p
           id="greet-text"
           style="font-size: 3em; font-weight: light; display: inline-block"
-          class="fade-down-desktop fade-mobile animation"
+          class="fade-down-desktop fade-down-mobile animation"
         >
           Hello, I'm
           <span
@@ -120,7 +120,7 @@
     <div class="nopointer" style="text-align: center; margin: -3vh">
       <div class="typewriter" style="display: inline-block">
         <p
-          class="typewriter-text fade-up-desktop fade-mobile animation"
+          class="typewriter-text fade-up-desktop fade-up-mobile animation"
           id="typewriter-text"
           style="font-weight: lighter; display: inline-block"
         >
@@ -134,21 +134,21 @@
       <div style="display: inline-block" id="about-me">
         <p
           style="font-size: 3em; font-weight: bold; display: inline-block"
-          class="fade-up-desktop fade-mobile animation gradient-title"
+          class="fade-up-desktop fade-up-mobile animation gradient-title"
         >
           About Me
         </p>
       </div>
     </div>
     <div
-      class="container overflow-hidden text-center fade-up-desktop fade-mobile animation"
+      class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
       style="padding-bottom: 10vh"
     >
       <div class="row gx-5">
         <!-- ENTRIES -->
         <div class="col">
           <div class="p-4 project-card">
-            <div class="fade-right-desktop fade-mobile animation">
+            <div class="fade-right-desktop fade-right-mobile animation">
               <!-- PAST -->
               <h3>Past</h3>
               <p>
@@ -160,7 +160,7 @@
                 the world of programming.
               </p>
             </div>
-            <div class="fade-right-desktop fade-mobile animation">
+            <div class="fade-right-desktop fade-right-mobile animation">
               <!-- PRESENT -->
               <h3>Present</h3>
               <p>
@@ -173,7 +173,7 @@
                 front & backend developer.
               </p>
             </div>
-            <div class="fade-right-desktop fade-mobile animation">
+            <div class="fade-right-desktop fade-right-mobile animation">
               <!-- FUTURE -->
               <h3>Future</h3>
               <p>
@@ -201,7 +201,7 @@
       <div style="display: inline-block" id="experience">
         <p
           style="font-size: 3em; font-weight: bold; display: inline-block"
-          class="fade-up-desktop fade-mobile animation gradient-title"
+          class="fade-up-desktop fade-up-mobile animation gradient-title"
         >
           Experience
         </p>
@@ -210,34 +210,34 @@
 
     <div class="timeline" style="margin: 3vh 10vw 0px 10vw">
       <ul>
-        <li class="fade-down-desktop fade-mobile animation">
+        <li class="fade-down-desktop fade-down-mobile animation">
           <b style="font-size: 23px">Popular Roblox RP Game</b>
-          <p class="fade-up-desktop fade-mobile animation">
+          <p class="fade-up-desktop fade-up-mobile animation">
             <i><b>Owner & Programmer</b> // January 2022 - Present</i>
           </p>
           <ul>
-            <li class="fade-right-desktop fade-mobile animation">
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>Managed a development team of approximately 10 people</p>
             </li>
-            <li class="fade-right-desktop fade-mobile animation">
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>
                 Programmed frontend and backend features, security, and UI/UX.
                 Developed a Discord bot to manage players' data externally
               </p>
             </li>
-            <li class="fade-right-desktop fade-mobile animation">
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>
                 Features a platform-leading advanced anti-exploit system that
                 detects exploiters who inject and run malicious scripts
               </p>
             </li>
-            <li class="fade-right-desktop fade-mobile animation">
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>
                 Started as a high school student with other extracurriculars and
                 sports
               </p>
             </li>
-            <li class="fade-right-desktop fade-mobile animation">
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>
                 Over 168,000 hours of playtime, 400,000 visits & helped pay for
                 my college expenses
@@ -252,12 +252,12 @@
       <div style="display: inline-block" id="experience">
         <p
           style="font-size: 2em; font-weight: light; display: inline-block"
-          class="fade-down-desktop fade-mobile animation"
+          class="fade-down-desktop fade-down-mobile animation"
         >
           Skills
         </p>
       </div>
-      <p class="fade-up-desktop fade-mobile animation">
+      <p class="fade-up-desktop fade-up-mobile animation">
         <img
           src="https://img.shields.io/badge/Python-3776AB?style=for-the-badge&logo=python&logoColor=white"
         />
@@ -300,7 +300,7 @@
     <!-- PROJECTS -->
     <div
       style="text-align: center; margin-top: 15vh"
-      class="fade-up-desktop fade-mobile animation"
+      class="fade-up-desktop fade-up-mobile animation"
     >
       <!-- Adjusted margin-top to bring closer -->
       <div id="projects">
@@ -314,7 +314,7 @@
     </div>
 
     <div
-      class="container overflow-hidden text-center fade-up-desktop fade-mobile animation"
+      class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
       style="padding-bottom: 20vh"
     >
       <div class="row gx-5">
@@ -446,7 +446,7 @@
       <div id="contact">
         <p
           style="font-size: 3em; font-weight: bold; display: inline-block"
-          class="fade-up-desktop fade-mobile animation gradient-title"
+          class="fade-up-desktop fade-up-mobile animation gradient-title"
         >
           Contact Me
         </p>
@@ -463,11 +463,11 @@
         <div class="form-group row">
           <label
             for="contact-email"
-            class="col-sm-2 col-form-label fade-right-desktop fade-mobile animation"
+            class="col-sm-2 col-form-label fade-right-desktop fade-right-mobile animation"
             style="margin-bottom: 1vh"
             >Email <span class="text-danger">*</span></label
           >
-          <div class="col-sm-10 fade-left-desktop fade-mobile animation">
+          <div class="col-sm-10 fade-left-desktop fade-left-mobile animation">
             <input
               type="email"
               name="email"
@@ -480,11 +480,11 @@
           </div>
           <label
             for="contact-name"
-            class="col-sm-2 col-form-label fade-right-desktop fade-mobile animation"
+            class="col-sm-2 col-form-label fade-right-desktop fade-right-mobile animation"
             style="margin-bottom: 1vh"
             >Name <span class="text-danger">*</span></label
           >
-          <div class="col-sm-10 fade-left-desktop fade-mobile animation">
+          <div class="col-sm-10 fade-left-desktop fade-left-mobile animation">
             <input
               type="text"
               name="name"
@@ -497,10 +497,10 @@
 
           <label
             for="contact-text"
-            class="col-sm-2 col-form-label fade-right-desktop fade-mobile animation"
+            class="col-sm-2 col-form-label fade-right-desktop fade-right-mobile animation"
             >Message <span class="text-danger">*</span></label
           >
-          <div class="col-sm-10 fade-left-desktop fade-mobile animation">
+          <div class="col-sm-10 fade-left-desktop fade-left-mobile animation">
             <textarea
               name="message"
               type="message"
@@ -515,7 +515,7 @@
         </div>
 
         <div class="text-center" style="margin-top: 3vh; margin-bottom: 3vh">
-          <div class="fade-up-desktop fade-mobile animation">
+          <div class="fade-up-desktop fade-up-mobile animation">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </div>
@@ -523,18 +523,18 @@
     </div>
     <p
       style="font-size: 1em; font-weight: lighter; text-align: center"
-      class="fade-up-desktop fade-mobile animation"
+      class="fade-up-desktop fade-up-mobile animation"
     >
       You can also contact me through my emails:
     </p>
     <div
       style="text-align: center"
-      class="fade-up-desktop fade-mobile animation"
+      class="fade-up-desktop fade-up-mobile animation"
     >
       <a
         align="center"
         href="https://mail.google.com/mail/?view=cm&to=arjohnsonn12@gmail.com"
-        class="fade-up-desktop fade-mobile animation no-underline"
+        class="fade-up-desktop fade-up-mobile animation no-underline"
       >
         <img
           src="https://img.shields.io/badge/Personal-D14836?style=for-the-badge&logo=gmail&logoColor=white"
@@ -543,7 +543,7 @@
       <a
         align="center"
         href="https://mail.google.com/mail/?view=cm&to=arjohnson12@utexas.edu"
-        class="fade-up-desktop fade-mobile animation no-underline"
+        class="fade-up-desktop fade-up-mobile animation no-underline"
       >
         <img
           src="https://img.shields.io/badge/University-fc7b03?style=for-the-badge&logo=gmail&logoColor=white"
@@ -555,14 +555,14 @@
       <div>
         <p
           style="font-size: 1.25em; display: inline-block; margin-bottom: 17px"
-          class="fade-up-desktop fade-mobile animation"
+          class="fade-up-desktop fade-up-mobile animation"
         >
           Looks like you made it to the end, thanks for scrolling through!
         </p>
         <br />
         <a href="#landing">
           <i
-            class="fa-solid fa-arrow-up-long fa-2xl fade-up-desktop fade-mobile animation bouncing"
+            class="fa-solid fa-arrow-up-long fa-2xl fade-up-desktop fade-up-mobile animation bouncing"
           ></i>
         </a>
       </div>
