--- a/index.html
+++ b/index.html
@@ -96,16 +96,15 @@
     ></canvas>
 
     <!-- GREETING TEXT -->
-    <div class="nopointer" style="text-align: center; margin-top: 40vh" id="">
+    <div class="nopointer" style="text-align: center; margin-top: 40vh">
       <div style="display: inline-block">
         <p
           id="greet-text"
-          style="font-size: 3em; font-weight: light; display: inline-block"
-          class="fade-down-desktop animation"
+          style="font-weight: light; display: inline-block"
+          class="fade-down-desktop fade-down-mobile animation"
         >
           Hello, I'm
           <span
-            id="test"
             style="
               font-weight: bolder;
               color: rgb(249, 104, 104);
@@ -120,7 +119,7 @@
     <div class="nopointer" style="text-align: center; margin: -3vh">
       <div class="typewriter" style="display: inline-block">
         <p
-          class="typewriter-text fade-up-desktop animation"
+          class="typewriter-text fade-up-desktop fade-up-mobile animation"
           id="typewriter-text"
           style="font-weight: lighter; display: inline-block"
         >
