--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <p
           id="greet-text"
           style="font-weight: light; display: inline-block"
-          class="fade-down-desktop fade-down-mobile animation"
+          class="fade-down-desktop animation"
         >
           Hello, I'm
           <span
@@ -119,7 +119,7 @@
     <div class="nopointer" style="text-align: center; margin: -3vh">
       <div class="typewriter" style="display: inline-block">
         <p
-          class="typewriter-text fade-up-desktop fade-up-mobile animation"
+          class="typewriter-text fade-up-desktop animation"
           id="typewriter-text"
           style="font-weight: lighter; display: inline-block"
         >
