--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <div style="display: inline-block">
         <p
           id="greet-text"
-          style="font-weight: light; display: inline-block"
+          style="font-size: 3em; font-weight: light; display: inline-block"
           class="fade-down-desktop animation"
         >
           Hello, I'm
