Adds "Jarvie A Day" project

--- a/index.html
+++ b/index.html
@@ -437,6 +437,42 @@
             </p>
           </div>
         </div>
+        <div class="col">
+          <div class="p-4 project-card">
+            <b style="font-size: 30px">iOS Application 1</b>
+            <div
+              id="carouselExampleFade"
+              style="padding-top: 1vh"
+              class="carousel"
+            >
+              <div class="carousel-inner zoom">
+                <div class="carousel-item active">
+                  <a href="#"
+                    ><img
+                      src="./Images/JarvieThumbnail.png"
+                      class="d-block w-100"
+                      alt="..."
+                  /></a>
+                </div>
+              </div>
+            </div>
+            <p style="padding-top: 3vh">
+              To expand my app development experience, I decided to make this
+              application for my friend's pet. Jarvie, the tuxedo cat, has a
+              different image every day of the year. This application features a
+              notification setting to notify the user to check the daily
+              image.<br /><br />
+            </p>
+            <p>
+              <img
+                src="https://img.shields.io/badge/Xcode-147EFB?style=for-the-badge&logo=xcode&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/Swift-F05138?style=for-the-badge&logo=swift&logoColor=white"
+              />
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
