About Me Change

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
     >
       <div class="row gx-5">
         <!-- ENTRIES -->
-        <div class="col">
+
+        <!-- <div class="col">
           <div class="p-4 project-card">
             <div class="fade-right-desktop fade-right-mobile animation">
-              <!-- PAST -->
               <h3>Past</h3>
               <p>
                 Taking after my father, I initially wanted to become an
@@ -160,20 +160,20 @@
               </p>
             </div>
             <div class="fade-right-desktop fade-right-mobile animation">
-              <!-- PRESENT -->
               <h3>Present</h3>
               <p>
-                Currently, I am a college freshman attending the
-                <b style="color: rgb(212, 120, 0)"
-                  >University of Texas at Austin</b
-                >
-                for <b>Computer Science</b>. Additionally, on the side, I own
-                and program a popular Roblox game played over 470,000 times as a
-                front & backend developer.
+                 Currently, I am a college freshman attending the
+                  <b style="color: rgb(212, 120, 0)"
+                    >University of Texas at Austin</b
+                  >
+                  for <b>Computer Science</b>. I tend to work on side projects
+                  to branch my knowledge, along with engaging in organizations I
+                  have joined at my school. Additionally, on the side, I own and
+                  program a popular Roblox game played over 470,000 times as a
+                  front & backend developer.
               </p>
             </div>
             <div class="fade-right-desktop fade-right-mobile animation">
-              <!-- FUTURE -->
               <h3>Future</h3>
               <p>
                 Every goal I set are building blocks for my future, which
@@ -190,6 +190,57 @@
         <div class="col">
           <div class="p-4 project-card">
             <img src="./Images/Portrait.png" class="d-block w-100" alt="..." />
+          </div>
+        </div>-->
+
+        <!-- No Picture -->
+        <div
+          class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
+          style="padding-bottom: 20vh"
+        >
+          <div class="row gx-5">
+            <!-- ENTRIES -->
+            <div class="col">
+              <div class="p-4 project-card">
+                <b style="font-size: 30px">Past</b>
+                <p style="padding-top: 3vh">
+                  Taking after my father, I initially wanted to become an
+                  aerospace engineer. However, as I grew older with technology
+                  surrounding me, I became naturally experienced in all things
+                  software. Because of this, I decided to combine my desire of
+                  becoming like my father and my love for software, and entered
+                  the world of programming.
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-4 project-card">
+                <b style="font-size: 30px">Present</b>
+                <p style="padding-top: 3vh">
+                  Currently, I am a college freshman attending the
+                  <b style="color: rgb(212, 120, 0)"
+                    >University of Texas at Austin</b
+                  >
+                  for <b>Computer Science</b>. I tend to work on side projects
+                  to branch my knowledge, along with engaging in organizations I
+                  have joined at my school. Additionally, on the side, I own and
+                  program a popular Roblox game played over 470,000 times as a
+                  front & backend developer.
+                </p>
+              </div>
+            </div>
+            <div class="col">
+              <div class="p-4 project-card">
+                <b style="font-size: 30px">Future</b>
+                <p style="padding-top: 3vh">
+                  Every goal I set are building blocks for my future, which
+                  include graduating from college, and becoming either a
+                  software engineer or entering the cybersecurity field.
+                  However, all things technology and software will pique my
+                  interest always.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
