--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico" />
+    <meta content="Aiden Johnson" property="og:title" />
+    <meta
+      content="Portfolio for Aiden Johnson, an aspiring software engineer from Prosper, TX"
+      property="og:description"
+    />
+    <meta content="https://aidenjohnson.dev" property="og:url" />
+    <meta content="https://i.imgur.com/xnxxiip.png" property="og:image" />
+    <meta content="#F54242" data-react-helmet="true" name="theme-color" />
   </head>
   <body>
     <p class="fixed" id="landing"></p>
