Improves embed description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="icon" type="image/x-icon" href="Images/favicon.ico" />
     <meta content="Aiden Johnson" property="og:title" />
     <meta
-      content="Portfolio for Aiden Johnson, an aspiring software engineer from Prosper, TX"
+      content="A game developer & aspiring software engineer from Prosper, TX"
       property="og:description"
     />
     <meta content="https://aidenjohnson.dev" property="og:url" />
