Adds Help Me Bevo project & GitHub button to projects

--- a/index.html
+++ b/index.html
@@ -494,9 +494,18 @@
               <img
                 src="https://img.shields.io/badge/Open Cloud API-00A2FF?style=for-the-badge&logo=roblox&logoColor=white"
               />
+              <a
+                class="p-2 me-auto no-underline"
+                href="https://github.com/arjohnsonn/Timothy"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-xl"></i>
+              </a>
             </p>
           </div>
         </div>
+      </div>
+      <div class="row gx-5">
         <div class="col">
           <div class="p-4 project-card">
             <b style="font-size: 30px">iOS Application 1</b>
@@ -530,6 +539,61 @@
               <img
                 src="https://img.shields.io/badge/Swift-F05138?style=for-the-badge&logo=swift&logoColor=white"
               />
+              <a
+                class="p-2 me-auto no-underline"
+                href="https://github.com/arjohnsonn/Jarvie-A-Day"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-xl"></i>
+              </a>
+            </p>
+          </div>
+        </div>
+        <div class="col">
+          <div class="p-4 project-card">
+            <b style="font-size: 30px">Help Me Bevo</b>
+
+            <div
+              id="carouselExampleFade"
+              style="padding-top: 1vh"
+              class="carousel"
+            >
+              <div class="carousel-inner zoom">
+                <div class="carousel-item active">
+                  <a href="#"
+                    ><img
+                      src="./Images/HelpMeBevo.png"
+                      class="d-block w-100"
+                      alt="..."
+                  /></a>
+                </div>
+              </div>
+            </div>
+            <p style="padding-top: 3vh">
+              A simple chrome extension to display the infamous 3rd down Bevo
+              animation every time you submit an assignment on Canvas. This was
+              originally suggested on social media with hundreds of likes, and I
+              decided to make it a reality for all UT students who want the
+              extra motivation!
+            </p>
+
+            <p>
+              <img
+                src="https://img.shields.io/badge/JavaScript-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black"
+              />
+              <img
+                src="https://img.shields.io/badge/HTML5-E34F26?style=for-the-badge&logo=html5&logoColor=white"
+              />
+              <img
+                src="https://img.shields.io/badge/CSS3-1572B6?style=for-the-badge&logo=css3&logoColor=white"
+              />
+              <a
+                class="p-2 me-auto no-underline"
+                href="https://github.com/arjohnsonn/Help-Me-Bevo"
+                target="_blank"
+              >
+                <i class="fa-brands fa-github fa-xl"></i>
+              </a>
             </p>
           </div>
         </div>
