Adds new Google Analytics tag

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
   <head>
+    <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-74LLGM3FER"
+      src="https://www.googletagmanager.com/gtag/js?id=G-D2G82E9MWK"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -12,7 +13,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-74LLGM3FER");
+      gtag("config", "G-D2G82E9MWK");
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
