Fixed About Me on mobile

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           class="container overflow-hidden text-center fade-up-desktop fade-up-mobile animation"
           style="padding-bottom: 20vh"
         >
-          <div class="row gx-5">
+          <div id="about-me-cols" class="row row-cols-2">
             <!-- ENTRIES -->
             <div class="col">
               <div class="p-4 project-card">
