Update game description

--- a/index.html
+++ b/index.html
@@ -290,30 +290,30 @@
           </p>
           <ul>
             <li class="fade-right-desktop fade-right-mobile animation">
+              <p>
+                Achieved over 250,000 hours of playtime, 500,000 visits, & over
+                13,500 favorites
+              </p>
+            </li>
+            <li class="fade-right-desktop fade-right-mobile animation">
+              <p>
+                Achieved a 99th percentile position for average session time and
+                99th percentile for payer conversion rate
+              </p>
+            </li>
+            <li class="fade-right-desktop fade-right-mobile animation">
               <p>Managed a development team of approximately 10 people</p>
             </li>
             <li class="fade-right-desktop fade-right-mobile animation">
               <p>
-                Programmed frontend and backend features, security, and UI/UX.
-                Developed a Discord bot to manage players' data externally
+                Programmed frontend and backend features, security, and UI/UX,
+                developed a Discord bot to manage players’ data externally
               </p>
             </li>
             <li class="fade-right-desktop fade-right-mobile animation">
               <p>
-                Features a platform-leading advanced anti-exploit system that
+                Developed a platform-leading advanced anti-exploit system that
                 detects exploiters who inject and run malicious scripts
-              </p>
-            </li>
-            <li class="fade-right-desktop fade-right-mobile animation">
-              <p>
-                Started as a high school student with other extracurriculars and
-                sports
-              </p>
-            </li>
-            <li class="fade-right-desktop fade-right-mobile animation">
-              <p>
-                Over 168,000 hours of playtime, 400,000 visits & helped pay for
-                my college expenses
               </p>
             </li>
           </ul>
@@ -444,11 +444,11 @@
               </button>
             </div>
             <p style="padding-top: 3vh">
-              Loved by tens of thousands of players & recognized as one of the
-              most realistic Roblox roleplay games with over 160,000 hours of
-              playtime. Programmed with <b>Luau</b>, Roblox's version of Lua, on
-              both frontend and backend. We are in the <b>99th</b> percentile on
-              the platform for average session time.<br /><br />
+              Played by hundreds of thousands of players & recognized as one of
+              the most realistic Roblox roleplay games with over 250,000 hours
+              of playtime. Programmed with <b>Luau</b>, Roblox's version of Lua,
+              on both frontend and backend. We are in the <b>99th</b> percentile
+              on the platform for average session time.<br /><br />
               <img
                 src="https://img.shields.io/badge/dynamic/json?url=https%3A%2F%2Fgames.roblox.com%2Fv1%2Fgames%3FuniverseIds%3D4221645607&query=data%5B0%5D.visits&style=for-the-badge&label=Visits&color=white"
                 alt="Game Visits"
